# CyKit

./: .gitignore  CyKIT.html  PhoCyKitRun-ForBrowser.bat  PhoCyKitRun-OriginalEpoc-ForBrowser.bat  PhoCyKitRun-UpdateEpocPlusFreqMode.bat  PhoCyKitRun.bat  README.md  environment.yml  pyproject.toml
Py3/: CyKIT.py  eeg.py
Py3/EEG-Logs/: EEG-recording_1.csv  EEG-recording_3.csv  EEG-recording_ActualElectrodes.csv
Web/: CyKIT.html
